rootskel (0.64) UNRELEASED; urgency=low

  * Sylvain Ferriol
    - In S20templates and di-main-menu, set cdebconf owner to 'd-i'.

 -- Denis Barbier <barbier@debian.org>  Sat, 21 Feb 2004 21:11:17 +0100

rootskel (0.63) unstable; urgency=low

  * Petter Reinholdtsen
    - Make sure apt-install umounts all new mount points when it is
      done, to avoid install problems when the package 'hotplug' is
      installed.
    - In debian-installer.d/S50priority, log when the priority is
      set or changed.
    - Detect tmpfs by testing to mount, instead of looking in
      /proc/filesystems.  The latter method is not reliable (Closes:
      #224656)

 -- Petter Reinholdtsen <pere@debian.org>  Sat, 14 Feb 2004 19:23:58 +0100

rootskel (0.62) unstable; urgency=low

  * Matt Kraai
    - Remove the first devfs mount in init.bootfloppy.
    - Add anna-install.
    - Add self to Uploaders.
  * Joey Hess
    - Update to debhelper v4, use udeb support, simplfy templates creation.

 -- Matt Kraai <kraai@debian.org>  Fri, 13 Feb 2004 06:24:54 -0800

rootskel (0.61) unstable; urgency=low

  * Bastian Blank
    - Always chroot the apt-get call, avoids problems with reduced or
      missmatching libc.
  * Joey Hess
    - Remove dummy ldconfig as the associated bugs are fixed.

 -- Joey Hess <joeyh@debian.org>  Thu,  5 Feb 2004 16:49:21 -0500

rootskel (0.60) unstable; urgency=low

  * Change the kernel for i386 to 2.4.24.

 -- Joey Hess <joeyh@debian.org>  Thu, 29 Jan 2004 16:25:19 -0500

rootskel (0.59) unstable; urgency=low

  * Richard Hirst
    - Change ia64 default kernel to 2.4.22-itanium-smp
  * Bastian Blank
    - Always fail on error.
    - Fix file list in src/etc/rcS.d.

 -- Bastian Blank <waldi@debian.org>  Sun, 25 Jan 2004 19:13:18 +0100

rootskel (0.58) unstable; urgency=low

  * Karsten Merker
    - fix TERM_TYPE detection for serial console on systems
      which boot on serial console with "console=ttyS*"
  * Matt Kraai
    - Create /var/run.
  * Joey Hess