@@ -1,5 +1,0 @@
-dir = bin
-
-files_exec = anna-install $(wildcard apt*) $(wildcard debconf*) register-module
-
-include ../Makefile.inc
