@@ -1,13 +1,0 @@
-#!/bin/sh -e
-
-log=/var/log/messages
-queue=/var/lib/anna-install/queue
-
-# Add to list of extra packages (to be) installed into /target/.
-mkdir -p /var/lib/anna-install
-touch $queue
-for pkg in $@ ; do
-    if ! grep -q "^$pkg$" $queue; then
-        echo "$pkg" >> $queue
-    fi
-done
