@@ -1,5 +1,0 @@
-dir = usr
-
-subdirs = lib
-
-include ../Makefile.inc
