@@ -1,29 +1,0 @@
-#!/bin/sh
-# register queued modules
-QUEUE=/var/lib/register-module/queue
-MODFILE=/target/etc/modules
-MODCONFILE=/target/etc/modutils/local
-
-if [ -e $QUEUE ]; then
-	touch $MODFILE
-
-	IFS="
-"
-	for line in $(cat $QUEUE); do
-		module=`echo "$line" | cut -d\  -f1`
-		echo $module >> $MODFILE
-		param=`echo $line | cut -d\  -f2`
-		if [ "$param" != "" ]; then
-			if [ ! -e $MODCONFILE ]; then
-				echo "# Local modules settings." > $MODCONFILE
-				echo "# Created by the Debian installer" >> $MODCONFILE
-			fi
-			echo "options $line" >> $MODCONFILE
-		fi
-	done
-	rm $QUEUE
-
-	if [ -e $MODCONFILE ]; then
-		chroot /target update-modules < /dev/null 2>&1 | logger "register-modules"
-	fi
-fi
