@@ -1,4 +1,0 @@
-dir = usr/lib/prebaseconfig.d
-files_exec = 50register-module
-
-include ../../../Makefile.inc
