@@ -1,5 +1,0 @@
-dir = var/lib
-
-subdirs = apt-install register-module
-
-include ../../Makefile.inc
